2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Small changes.

	* releases.py (get_aggregate_stats): Added, used.
	* templates/list-releases.tmpl: Added.
	* templates/release.tmpl: Added.

	* HACKING: Some runtime notes.

	* Makefile: Add dist and release targets.

	* teams.py (TranslationLanguages): add show_hidden parameter.

	* update-stats.py (LocStatistics.update_stats_database): 
	Correct POT clean-up stuff (buggy SQLObject?).

	* utils.py (getElementContents, getElementText)
	(getElementAttribute): Added misc xml.dom.minidom functions.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* HACKING: Add more TODO items.

	* utils.py (TemplateInspector): Use WEBDEBUG.
	* defaults.py (WEBDEBUG): Added.

	* INSTALL: Added.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* defaults.py (generate_docs): disable it (it's too slow).

	* update-stats.py (LocStatistics.doc_l10n_stats): pass potbase as
	well to update_doc_po_files().
	(LocStatistics.generate_translated_docs): implement translated doc
	generation.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* defaults.py: Set modules_xml, releases_xml, teams_xml.
	* modules.py: Use defaults.modules_xml.
	* releases.py: Use defaults.modules_xml and default.releases_xml
	* teams.py: Use defaults.teams_xml.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Update gtk+ stuff.

	* templates/language-release-doc-stats-modules.tmpl: 
	* templates/language-release-ui-stats-modules.tmpl: 

	* releases.py (Releases.list_modules): Add percentages for single domains.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* releases.py:
	* templates/language-release-doc-stats-modules.tmpl: 
	* templates/language-release-ui-stats-modules.tmpl: 
	Display module and branch info in tooltips.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* index.html: Updated text.

	* templates/list-languages.tmpl:
	* teams.py (TranslationTeams.compare_langs): 
	Added function, sort languages.
